@@ -1,15 +1,17 @@
 package com.example.banking.domain;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 
 public class Customer {
-	private String identity;
+	private final String identity;
 	private String fullName;
-	private List<Account> accounts = new ArrayList<>();
+	private Map<String, Account> accounts = new LinkedHashMap<>();
+	private List<Account> accountList = new ArrayList<>();
 
 	public Customer(String identity, String fullName) {
 		this.identity = identity;
@@ -28,35 +30,50 @@ public class Customer {
 		return identity;
 	}
 
-	public void setIdentity(String identity) {
-		this.identity = identity;
-	}
-
 	public void addAccount(Account account) {
-		accounts.add(account);
+		accounts.put(account.getIban(), account);
+		accountList.add(account);
 	}
-	
-	// Overloading: Same class & method name, diffent signature
-	// Overriding: Inherited Classes, same method name & signature
-	//public Optional<Account> removeAccount(int index){} //doldurucaz içini
 
-	
+	public Optional<Account> findAccount(String iban) {
+		return Optional.ofNullable(accounts.get(iban));
+	}
+
+	// Overloading: Same class & method name, different signature
+	// Overriding: Inherited Classes, same method name & signature
+	public Optional<Account> removeAccount(int index) {
+		if (index < 0 || index >= accounts.size())
+			return Optional.empty();
+		return removeAccount(accountList.remove(index).getIban());
+	}
+
 	public Optional<Account> removeAccount(String iban) {
-		Account foundAccount = null;
-		for (var account : accounts) {
-			if (account.getIban().equals(iban)) {
-				foundAccount = account;
-				break;
-			}
-		}
-		if (Objects.nonNull(foundAccount)) {
-			accounts.remove(foundAccount);
-		}
-		return Optional.ofNullable(foundAccount);
+		if (Objects.isNull(iban))
+			return Optional.empty();
+		var account = accounts.remove(iban);
+		accountList.remove(account);
+		return Optional.ofNullable(account);
 	}
 
 	public List<Account> getAccounts() {
-		return Collections.unmodifiableList(accounts);
+		return List.copyOf(accounts.values());
+	}
+
+	@Override
+	public int hashCode() {
+		return Objects.hash(identity);
+	}
+
+	@Override
+	public boolean equals(Object obj) {
+		if (this == obj)
+			return true;
+		if (obj == null)
+			return false;
+		if (getClass() != obj.getClass())
+			return false;
+		Customer other = (Customer) obj;
+		return Objects.equals(identity, other.identity);
 	}
 
 	@Override
